public/stylesheet.css
/* ... */
button {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
}

a {
  color: inherit;
  cursor: pointer;
  text-decoration: none;
}

/* Header */

.header {
  background-color: var(--color-background);
  padding: 5rem var(--side-offset);
  z-index: 10;
}
@media (max-width: 860px) {
  .header {
    padding-top: 2rem;
  }
}
@media (max-width: 640px) {
  .header {
    background-color: var(--color-background);
    padding-top: 1rem;
  }
}

.header__title {
  font-family: 'Roboto Mono', monospace;
  font-size: 1.7rem;
  font-weight: 600;
  flex-basis: 40%;
  margin: 0 0 0.5rem;
}

.header__description {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.9rem;
  margin: 0.2rem 0;
}

.header__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  float: right;
  justify-content: flex-end;
  list-style: none;
  margin: 0.2rem 0 0;
}
@media (max-width: 640px) {
  .header__list {
    float: none;
    justify-content: space-around;
    margin: 0 0 1rem;
  }
}

.header__list-item {
  font-family: 'Roboto Mono', monospace;
  font-size: 1rem;
  font-weight: 600;
  margin: 0 0.7rem;
}
.header__list-item:hover {
  color: var(--color-button-hover);
  text-decoration: underline;
}

/* Main */

.main {
  background-color: var(--color-background);
  flex-grow: 2;
  padding: 0 var(--side-offset) 2rem;
}

/* Control */

.sticky-header-shadow {
  box-shadow: 0 3px 1px 0 var(--color-shadows);
  height: 1px;
  position: sticky;
  width: 100%;
  top: 3.85rem;
  z-index: 9;
}
@media (max-width: 640px) {
  .sticky-header-shadow {
    display: none;
  }
}

.control {
  background-color: var(--color-background);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  margin: 0 calc(-1 * var(--side-offset)) 1.2rem;
  padding: 0.8rem var(--side-offset);
  position: sticky;
  top: -1.7rem;
  z-index: 10;
}
@media (max-width: 640px) {
  .control {
    background-color: var(--color-background);
    box-shadow: none;
    justify-content: flex-end;
    margin-bottom: 0.5rem;
    position: relative;
  }
}

.control-field {
  display: flex;
  flex-direction: column;
  margin-right: 1rem;
}
.control-field:first-of-type {
  flex-basis: 25%;
  min-width: 260px;
}
@media (max-width: 640px) {
  .control-field {
    margin: 0.5rem 0 0.5rem 1rem;
  }
  .control-field:first-of-type {
    flex-basis: 70%;
    flex-grow: 1;
    margin: 0.5rem 0;
  }
}

.control-field__title {
  font-family: 'Roboto Mono', monospace;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1rem;
  margin-bottom: 0.7rem;
  position: relative;
}
body.no-js .control-field__title {
  color: var(--color-disabled);
}

.control-field__row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
}

.control__button,
.control__input {
  background-color: transparent;
  border: 0.1rem solid var(--color-button-border);
  border-radius: var(--border-radius-small);
  color: var(--color-text-default);
  height: 2.4rem;
  padding: 0.4rem;
}

.control__input {
  font-family: 'Roboto Mono', monospace;
  outline: 0;
  padding: 0.4rem 2rem 0.4rem 0.8rem;
  width: 100%;
}
.control__input:focus {
  box-shadow: 0 0 3px 0 var(--color-shadows);
}
@media (max-width: 640px) {
  .control__input {
    font-size: 1.1rem;
  }
}

.control__button {
  cursor: default; /* Button should not work when JS is disabled */
  fill: var(--color-button-hover);
  margin: 0 0.3rem;
  width: 2.4rem;
}
.control__button:first-of-type {
  margin-left: 0;
}
.control__button:not(:disabled):focus,
.control__button:not(:disabled):hover {
  background-color: var(--color-button-hover) !important;
  border-color: var(--color-button-hover) !important;
  cursor: pointer;
  fill: var(--color-background);
}

/* Control - disabled */

.control__input:disabled {
  border-color: var(--color-disabled);
}

.control__button:disabled {
  border-color: var(--color-disabled) !important;
  fill: var(--color-disabled);
}

/* Control - search */

.search__wrapper {
  position: relative;
}

.search-input {
  padding-right: 20px;
}

.search #search-clear {
  cursor: pointer;
  display: inline;
  font-family: 'Roboto Mono', monospace;
  font-size: 1.5rem;
  line-height: 2.3rem;
  padding: 0 12px;
  position: absolute;
  right: 0;
  top: 0;
}
.search #search-clear::selection {
  background-color: transparent;
}

/* Control - order */

body.order-alphabetically #order-alpha,
body.order-by-color #order-color,
body.order-by-relevance #order-relevance {
  background-color: var(--color-button-active);
  border-color: var(--color-button-active);
  color: var(--color-background);
  cursor: default;
  fill: var(--color-background);
}

/* Control - color */

body.dark #color-scheme-dark,
body.light #color-scheme-light,
body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
  background-color: var(--color-button-active);
  border-color: var(--color-button-active);
  cursor: default;
  fill: var(--color-background);
}

/* Control - noscript */

.control noscript {
  position: absolute;
  font-family: 'Roboto Mono', monospace;
  font-style: italic;
  top: -2rem;
}

/* Grid */

.grid {
  --grid-width: 13rem;

  display: grid;
  list-style: none;
  gap: 0.75rem;
  grid-template-columns: repeat(auto-fill, minmax(var(--grid-width), 1fr));
  margin: 0 0 1.5rem;
}

.grid-item--if-empty {
  display: flex;
  grid-column: 1 / span 2;
  margin: 0 0.4rem;
}
.grid-item--if-empty p {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.9rem;
}
.grid-item--if-empty a {
  color: var(--color-link);
}
.grid-item--if-empty a:focus,
.grid-item--if-empty a:hover {
  color: var(--color-link-hover);
  text-decoration: underline;
}
.grid-item--if-empty a:visited {
  color: var(--color-link-visited);
}

#carbonads,
.grid-item {
  background-color: var(--color-background-card);
  border-radius: var(--border-radius-large);
  box-shadow: 0px 0px 3px 0px var(--color-shadows);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}
/* ... */

